added html comment

--- a/templates/main.html
+++ b/templates/main.html
@@ -10,7 +10,7 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/c502137733.js"></script>
-
+<!---------------- Styling  ----------------->
     <style>
         .col-sm {
             min-width: 300px;
@@ -37,8 +37,9 @@
             border: 1px solid rgba(255, 255, 255, 0.18);
         }
     </style>
-
+<!---------------- End Styling  ----------------->
 </head>
+
 
 <body>
     <div class="container-fluid">
